--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/ParamagicDev/building-with-responsive-design/issues"
   },
-  "homepage": "https://github.com/ParamagicDev/building-with-responsive-design#readme"
+  "homepage": "https://github.com/ParamagicDev/building-with-responsive-design#readme",
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
+  }
 }
